--- a/package.json
+++ b/package.json
@@ -36,5 +36,8 @@
     "ts-node": "3.3.0",
     "ts-node-dev": "^1.1.6",
     "typescript": "4.1.5"
+  },
+  "engines": {
+    "node": "14.x"
   }
 }
