--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "lib": ["es2019"],
     "module": "commonjs",
     "moduleResolution": "node",
-    "outDir": "./build",
+    "outDir": "dist",
     "sourceMap": true,
     "resolveJsonModule": true,
     "skipLibCheck": true, 
