setup typeorm for heroku build

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,15 +3,15 @@
     "target": "es2019",
     "lib": ["es2019"],
     "module": "commonjs",
-    "moduleResolution": "node",
     "outDir": "dist",
-    "sourceMap": true,
+    "allowJs": true,
+    "sourceMap": false,
     "resolveJsonModule": true,
-    "skipLibCheck": true, 
     "esModuleInterop": true,
+    "skipLibCheck": true, 
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
    },
-  "include": ["src/**/*.ts", "src/**/*.json", "lib/**/*.ts"],
+  "include": ["src/**/*.ts"],
   "exclude": ["node_modules"],
 }
