--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "tsc",
     "dev": "ts-node-dev src/index.ts",
     "clean": "rm -rf dist",
-    "start": "node dist/index.js",
+    "start": "NODE_ENV=production node dist/index.js",
     "lint": "eslint src/**/*.ts",
     "format": "eslint src/**/*.ts --fix"
   },
