--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "printWidth": 100
   },
   "dependencies": {
-    "@airbrake/node": "^2.1.3",
+    "@sentry/node": "^6.2.5",
+    "@sentry/tracing": "^6.2.5",
     "bn.js": "^5.2.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
