--- a/package.json
+++ b/package.json
@@ -17,12 +17,11 @@
     "printWidth": 100
   },
   "dependencies": {
-    "@sentry/node": "^6.2.5",
-    "@sentry/tracing": "^6.2.5",
     "bn.js": "^5.2.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-rate-limit": "^5.2.6",
     "pg": "^8.5.1",
     "reflect-metadata": "^0.1.10",
     "typeorm": "0.2.31",
